// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processObjectFile() > obj_example_1 1`] = `
{
  "className": "Base",
  "extendedClassName": "GMObject",
  "scripts": [
    {
      "code": "move_player(self); // move_player is external script
",
      "scriptName": "onStep",
    },
    {
      "code": "var _xx = self.x;
var _yy = self.y - 40;
var x = self.x;
// Draw Shadow
draw_set_color(c_black);
draw_text(_xx + 2, _yy + 2, self.name);
// Draw Main Text
draw_set_color(c_white);
draw_text(_xx, _yy, self.name);
",
      "scriptName": "onDrawGui",
    },
    {
      "code": "event_inherited();",
      "scriptName": "onCreate",
    },
  ],
}
`;

exports[`processObjectFile() > should correctly parse a class name and its methods into scripts 1`] = `
{
  "className": "TestObject",
  "extendedClassName": "GMObject",
  "scripts": [
    {
      "code": "event_inherited();

self.movement_speed = 3;
",
      "scriptName": "onCreate",
    },
  ],
}
`;

exports[`processObjectFile() > should handle methods inheritance when extending 1`] = `
{
  "className": "Player",
  "extendedClassName": "Entity",
  "scripts": [
    {
      "code": "event_inherited();

__super_Player_move = move;
move = function (dx, dy) {
    __super_Player_move(dx, dy);
};


__super_Player_say_hi = say_hi;
say_hi = function () {
    __super_Player_say_hi();
};


__super_Player_mind_own_biz = mind_own_biz;
mind_own_biz = function () {
    self.sprite_index = spr_mind_own_biz;
};
",
      "scriptName": "onCreate",
    },
  ],
}
`;

exports[`processObjectFile() > should handle methods within a class 1`] = `
{
  "className": "TestObject",
  "extendedClassName": "GMObject",
  "scripts": [
    {
      "code": "event_inherited();
// Object methods from TestObject
changeSpeed = function (speed) {
    self.movement_speed = speed;
};

// End object methods

self.movement_speed = 3;
",
      "scriptName": "onCreate",
    },
  ],
}
`;

exports[`processObjectFile() > should handle methods within a class without onCreate event 1`] = `
{
  "className": "TestObject",
  "extendedClassName": "GMObject",
  "scripts": [
    {
      "code": "event_inherited();

changeSpeed = function (speed) {
    self.movement_speed = speed;
};
",
      "scriptName": "onCreate",
    },
  ],
}
`;
